--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,7 +8,7 @@ on:
     branches: [ main ]
 
 env:
-  REGISTRY: registry.cn-hangzhou.aliyuncs.com
+  REGISTRY: crpi-qugj9o9vg9ub7qd3.cn-hangzhou.personal.cr.aliyuncs.com
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
